# socckergambling

./: .gitignore  CLAUDE.md  betting_analysis_template.spec  browser_bet_scraper.py  build_app.py  live_bet_scraper.py  odds-detail-sample.html  pyinstaller_windows.spec  pyproject.toml  setup.py  百家欧赔示例.html  足球彩票分析工具.spec
.github/workflows/: build-installers.yml
gui/: __init__.py  main.py  main_window.py
gui/styles/: macos_style.qss
gui/widgets/: __init__.py  control_panel.py  match_table.py  progress_dialog.py
gui/workers/: __init__.py  scraping_worker.py
resources/icons/: app_icon.icns
